extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr4a.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr4a.obr:14:1:error: keyword "DO" found where variable name expected
END ExErr4a.
^
